# mlir-example

./: .gitignore
00-lowering-llvm/: CMakeLists.txt  print.ll  print.mlir
00-lowering-llvm/hello-opt/: CMakeLists.txt  hello-opt.cpp
00-lowering-llvm/test/: 01-constant.mlir  02-undef.mlir  03-global.mlir  04-mathop.mlir  05-tyop.mlir  11-call.mlir  12-if.mlir  13-while.mlir
00-mlir-hello/: CMakeLists.txt
00-mlir-hello/hello-opt/: CMakeLists.txt  hello-opt.cpp
00-mlir-hello/include/Hello/: HelloDialect.h  HelloDialect.td  HelloOps.h  HelloOps.td
00-mlir-hello/lib/Hello/: CMakeLists.txt  HelloDialect.cpp  HelloOps.cpp  LowerHelloPass.cpp
00-mlir-hello/test/: TestConstant.mlir
